--- a/package.json
+++ b/package.json
@@ -37,14 +37,18 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/joi": "^17.2.3",
     "@types/node": "^16.7.10",
     "@types/uuid": "^8.3.4",
     "gulp": "^4.0.2",
     "gulp-uglify-es": "^3.0.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.15",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.4.2"
   }
