--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "clean": "rimraf cache dist reports coverage",
     "build": "tsc && gulp minify",
     "serve": "cross-env NODE_ENV=prod node dist/server.js",
-    "dev": "NODE_ENV=develop && nodemon src/server.ts",
+    "dev": "cross-env NODE_ENV=develop && nodemon src/server.ts",
     "dev:win": "set \"NODE_ENV=develop\" && nodemon src/server.ts",
     "test": "jest --coverage"
   },
@@ -25,6 +25,7 @@
   "dependencies": {
     "@typegoose/typegoose": "^9.7.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.6",
     "@types/joi": "^17.2.3",
